@startuml
skinparam linetype ortho

namespace Application{
      class ApplicationManager {
          +startApplication(appId)
          +stopApplication()

          +setJsonConfig(appId, jsonConfig)
          +getJsonConfig(appId)
      }

      interface Application {
          +setJson(jsonConfig)
          +getJson()
          +start()
          +stop()

          -{abstract} applicationThread()
          -{abstract} updateJson(jsonConfig)
      }



      class ThreadPool {
          +startWorkerThread()
          +stopWorkerThread()
          +setIdelDuration(idleDuration)
          +addTask(task, args)
          +removeAndStopAllTasks()
      }

      ThreadPool -* Application

      namespace Clock {
          class ApplicationClock {
              -lockJsonConfig
              -applicationThread()
              -updateJson(jsonConfig)
          }
          class ClockBackend {
              +buildLedMatrixFromCurrentTime(jsonConfig)
              -getTime()
          }
          class ClockFrontend {
              -oldLedMatrix
              +showLedMatrixTask(ledMatrix)
              +showLedMatrixTask(ledMatrix, jsonConfig)
              -isUpdateNecessary(ledMatrix)
          }
          class LedBinding {
              +showLedList(ledList)
          }

          class LedMatrix {
            -float[3] colorBodyRGB
            -float[3] colorMinuteRGB
            -float[3] colorSecondRGB
            -float[3] colorBorderRGB
            -profile
            -matrixBody
            -borderBody
            -ledList
            +LedMatrix(time, jsonConfig)
            +getLedList()
            +getAndUpdateLedList()
            + +operator()
            + -operator()
            + *operator()
            -getColorsFromTime(time, jsonConfig)
            -buildLedListFromMatrix()
          }

          Application.Application <|-- Application.Clock.ApplicationClock
          ApplicationClock *-- ClockBackend
          ApplicationClock *-- ClockFrontend
          ClockFrontend *-- LedBinding
          ClockBackend --> LedMatrix
      }

}

@enduml
